# shorthand-companion

./: .gitignore  Cargo.toml  README.md  dependencies.txt
src/: add_new_word_window.rs  app.rs  canvas.rs  main.rs  model.rs  painting.rs  utils.rs
