[package]
name = "teeline_dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
edition = "2021"

[dependencies]
egui = "*"
eframe = { version = "*", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
image = "*"

[profile.release]
opt-level = 2 # fast and small wasm